cc-botshield-app/main/default/objects/BotShield_Census__c/BotShield_Census__c.object-meta.xml
<CustomObject>
    <label>BotShield Census</label>
    <pluralLabel>BotShield Census Verifications</pluralLabel>
    <nameField>
        <displayFormat>BSC-{00000000}</displayFormat>
        <label>Census Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One row per BotShield Census verification (the &quot;is a human here?&quot; rail). Written by the BotShield Console push (upsert on Request_ID__c) and read in-org by the checkout gate; CDC-enabled so Flows/LWCs react the moment a verification lands. Mirrors the Console Verification Logs — outcome only, never PII.</description>
</CustomObject>