cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Action_Scope__c.field-meta.xml
<CustomField>
    <fullName>Action_Scope__c</fullName>
    <label>Action Scope</label>
    <type>Text</type>
    <length>255</length>
    <description>The scope the verification gated, e.g. ticket_purchase.</description>
</CustomField>