cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Attestation_Token__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Token__c</fullName>
    <label>Attestation Token</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>The receipt JWT for the verification. Re-verifiable via sdk/verify-token; never contains PII.</description>
</CustomField>