cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Claims_JSON__c.field-meta.xml
<CustomField>
    <fullName>Claims_JSON__c</fullName>
    <label>Claims JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Decoded attestation claims. Outcome only — no email, device, biometric method, IP or score, ever.</description>
</CustomField>