cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <label>Deployment</label>
    <type>Text</type>
    <length>255</length>
    <description>BotShield Console deployment name, e.g. botshield_sfdc_coral_travel_checkout_demo.</description>
</CustomField>