cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <label>Duration (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Wall-clock duration from create to terminal status — the Console Duration column.</description>
</CustomField>