cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <label>Request ID</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
    <description>The verification request_id minted by sdk/create-verification-link. External ID + unique — the upsert key for the Console push and the in-org readers.</description>
</CustomField>