cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Result_State__c.field-meta.xml
<CustomField>
    <fullName>Result_State__c</fullName>
    <label>Result State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Human Verified</fullName><default>false</default><label>Human Verified</label></value>
            <value><fullName>MultiPass Active</fullName><default>false</default><label>MultiPass Active</label></value>
            <value><fullName>Unavailable</fullName><default>false</default><label>Unavailable</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Client-surface result state (K.1 vocabulary): Human Verified / MultiPass Active / Unavailable.</description>
</CustomField>