cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Site_Key__c.field-meta.xml
<CustomField>
    <fullName>Site_Key__c</fullName>
    <label>Site Key</label>
    <type>Text</type>
    <length>255</length>
    <description>Publishable pk_… site key the verification was created under.</description>
</CustomField>