cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_ID__c</fullName>
    <label>Source Record ID</label>
    <type>Text</type>
    <length>255</length>
    <description>In-org only: what the verification gated (e.g. Booking, Order, Case). Set by the consuming Apex, not by the push.</description>
</CustomField>