cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <label>Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when Status = Completed. Denormalized so Flows and reports can filter without a picklist compare.</description>
</CustomField>