cc-botshield-app/main/default/objects/BotShield_Census__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <label>Verified At</label>
    <type>DateTime</type>
    <description>Completion timestamp.</description>
</CustomField>